apps/base/signal-cli/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signal-cli
  labels:
    app: signal-cli
