apps/base/signal-cli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-cli
  namespace: signal-cli
  labels:
    app: signal-cli
spec:
  type: ClusterIP
  selector:
    app: signal-cli
  ports:
    - name: json-rpc
      port: 7583
      targetPort: 7583
      protocol: TCP
